# BP2UIP

./: .env.example  .gitignore  LICENSE  README.md  bp2uip_milestone_plan.md  cspell.json
.github/workflows/: ci.yml
artifacts/: README.md
artifacts/estate/: analysis.json  estate.json  modernization-report.md
artifacts/mfg-address-change/: intent-spec.json  intent-spec.md  manifest.json  pdd.md  provenance.jsonl  sdd.md  uplift.json  uplift.md
artifacts/mfg-card-dispute-intake/: intent-spec.json  intent-spec.md  manifest.json  pdd.md  provenance.jsonl  sdd.md  uplift.json  uplift.md
artifacts/mfg-daily-settlement-reconciliation/: intent-spec.json  intent-spec.md  manifest.json  pdd.md  (+4 more)
dashboard/: package.json  pnpm-lock.yaml
docs/: fixture-build-sheet.md  how-it-works.md  intent-spec.md  master-plan.md  roadmap.md  uplift-criteria.md
fixtures/: README.md  meridian-estate.bprelease  meridian-p01-dispute-intake.bprelease  meridian-p03-address-change.bprelease  meridian-p04-reconciliation.bprelease  meridian-p06-dispute-feeder.bprelease
pipeline/: pyproject.toml
pipeline/src/bp2uip/: __init__.py  analysis.py  cli.py  docsgen.py  emitters.py  gate.py  intent.py  model.py  parser.py  provenance.py  providers.py  render.py
pipeline/tests/: conftest.py  test_analysis.py  test_cli.py  test_docsgen.py  test_gate.py  test_intent.py  test_parser.py  test_provenance.py  test_render.py  test_schemas.py
schema/: estate-analysis.schema.json  estate.schema.json  intent-spec.schema.json  manifest.schema.json  provenance-event.schema.json  uplift-finding.schema.json
(+31 files in other folders)
